# AIIT_C_Language_Programming_Assignments

./: CMakeLists.txt  README.md
平时提交的题目/: 2024-10-18.c  2024-10-30.2.c  2024-10-30.c
第五次作业/: 9X9.c
第六次作业—学生成绩管理/: thesystemofstudenmanagement.c  thesystemofstudentmanagement.c  thesystemofstudentmanagement2.0.c
第四次作业/: chengtizhong1.c  chengtizhong2.c  zhengtizhong3.c  zhengtizhong4.c
计算思维导论复习内容/: fu1.c  fu2.1.c  fu2.2.c  fu3.c  fu4.c  fu5.c  fu6.c  计算思维导论复习内容(1).docx
阶段性考核一/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  学生版-阶段考核一（编程题）.doc
阶段性考核二/: 2.1.c  2.10.c  2.11.c  2.12.c  2.2.c  2.3.c  2.4.c  2.5.c  2.6.c  2.7.c  2.8.c  2.9.c  计算思维-c语言阶段考核二（编程题）.doc
