cmake_minimum_required(VERSION 3.29)
project(AIIT_C_Language_Programming_Assignments C)

set(CMAKE_C_STANDARD 11)

add_executable(AIIT_C_Language_Programming_Assignments
        平时提交的题目/2024-10-30.c)

add_executable(10.30 平时提交的题目/2024-10-30.c)
add_executable(2024-10-18 平时提交的题目/2024-10-18.c)
add_executable(2024-10-30.2 平时提交的题目/2024-10-30.2.c)
add_executable(1 阶段性考核一/1.c)

add_executable(2 阶段性考核一/2.c)
add_executable(3 阶段性考核一/3.c)
add_executable(4 阶段性考核一/4.c)
add_executable(5 阶段性考核一/5.c)
add_executable(6 阶段性考核一/6.c)
add_executable(7 阶段性考核一/7.c)
add_executable(8 阶段性考核一/8.c)
add_executable(9 阶段性考核一/9.c)
add_executable(10 阶段性考核一/10.c)
add_executable(11 阶段性考核一/11.c)
add_executable(12 阶段性考核一/12.c)
add_executable(13 阶段性考核一/13.c)
add_executable(14 阶段性考核一/14.c)
add_executable(15 阶段性考核一/15.c)
add_executable(16 阶段性考核一/16.c)
add_executable(17 阶段性考核一/17.c)
add_executable(18 阶段性考核一/18.c)
add_executable(19 阶段性考核一/19.c)
add_executable(20 阶段性考核一/20.c)
add_executable(2.1 阶段性考核二/2.1.c)
add_executable(2.2 阶段性考核二/2.2.c)
add_executable(2.3 阶段性考核二/2.3.c)
add_executable(2.4 阶段性考核二/2.4.c)
add_executable(2.5 阶段性考核二/2.5.c)
add_executable(2.6 阶段性考核二/2.6.c)
add_executable(2.7 阶段性考核二/2.7.c)
add_executable(2.8 阶段性考核二/2.8.c)
add_executable(2.9 阶段性考核二/2.9.c)
add_executable(2.10 阶段性考核二/2.10.c)
add_executable(2.11 阶段性考核二/2.11.c)
add_executable(2.12 阶段性考核二/2.12.c)

add_executable(9X9 第五次作业/9X9.c)
add_executable(chengtizhong1 第四次作业/chengtizhong1.c)
add_executable(chengtizhong2 第四次作业/chengtizhong2.c)
add_executable(zhengtizhong3 第四次作业/zhengtizhong3.c)
add_executable(zhengtizhong4 第四次作业/zhengtizhong4.c)